--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,6 +4,25 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_settings" />
+    <item
+        android:id="@+id/addItem"
+        android:orderInCategory="100"
+        android:title="Add"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/deleteItem"
+        android:orderInCategory="100"
+        android:title="Delete"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/emailOption"
+        android:orderInCategory="100"
+        android:title="Email"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/smsOption"
+        android:orderInCategory="100"
+        android:title="SMS"
         app:showAsAction="never" />
 </menu>
